# shm-debugger

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  conanfile.txt
.github/workflows/: build.yml
shmd-dumper/: CMakeLists.txt  main.cpp
shmd-emulator/: CMakeLists.txt  main.cpp
shmd-lib/: CMakeLists.txt  acc_connector.cpp  acc_connector.h  acc_data.cpp  application.cpp  application.h  connector.h  connector_acc.cpp  connector_acc.h  connector_iracing.cpp  connector_iracing.h  data_acc.cpp  data_acc.h  data_iracing.cpp  data_iracing.h  emulator.h  emulator_acc.cpp  emulator_acc.h  emulator_iracing.cpp  emulator_iracing.h  iracing_connector.cpp  iracing_connector.h  iracing_data.cpp  iracing_data.h  iracing_emulator.cpp  iracing_emulator.h  loader.cpp  loader.h  saver.cpp  saver.h
shmd-lib/ac/: connector_acc.cpp  data_acc.cpp  data_acc.h  emulator_acc.cpp
shmd-lib/ac/acsdk/: SharedFileOutACC.h
shmd-lib/acsdk/: SharedFileOutAC.h  shm.cpp  shm.h
shmd-lib/iracing/: connector_iracing.cpp  connector_iracing.h  data_iracing.cpp  data_iracing.h  emulator_iracing.cpp  emulator_iracing.h
shmd-lib/iracing/irsdk/: irsdk_utils.cpp
shmd-tests/: CMakeLists.txt  application_test.cpp  data_acc_test.cpp  data_iracing_test.cpp  emulator_iracing_test.cpp  iracing_data_test.cpp  iracing_emulator_test.cpp  loader_saver_test.cpp
